src/z80asm/z80asm2/t/30-directive/expected/incbin_03.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_03.asm
Assembling t/30-directive/input/incbin_03.asm...
t/30-directive/input/incbin_03.asm:1:29: error: Unexpected token after INCBIN: extra
    incbin "file_not_found.bin" extra
                                ^
